# JapanQuakes

./: CMakeLists.txt  classes.h  helper.h  japanMap.txt  main.cpp  quakesMap.txt
